--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="./deleitesaludable/index.html" class="btn-cajon">🥗 Deleite Saludable</a>
         <a href="./polloharana/index.html" class="btn-cajon">🥗 Pollo Harana</a>
         <a href="./lapizzadefranco/index.html" class="btn-cajon">🥗 La Pizza de Franco</a>
-        a href="./arepadonhuevo/index.html" class="btn-cajon">🥗 Arepa don Huevo</a>
+        <a href="./arepadonhuevo/index.html" class="btn-cajon">🥗 Arepa don Huevo</a>
 
         <div class="categoria">Tiendas y Mercados</div>
         <a href="./tienda-azul/index.html" class="btn-cajon">🔵 Tienda Azul</a>
