--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <a href="./atarraya/index.html" class="btn-cajon">🎣 Atarrayas & Hamacas</a>
         <a href="./paula-areiza/index.html" class="btn-cajon">👠 Ventas Paula Areiza</a>
         <a href="./nelson/index.html" class="btn-cajon">👤 Tienda Mas x Menos</a>
+        <a href="./lavadoyaspiradosas/index.html" class="btn-cajon">👤 Lavado y Aspirado a.s.</a>
 
         <div class="categoria">Transporte e Inversiones</div>
         <a href="./sotracor-caucasia/index.html" class="btn-cajon">🚌 Sotracor Caucasia</a>
