--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <a href="./polloharana/index.html" class="btn-cajon">🥗 Pollo Harana</a>
         <a href="./lapizzadefranco/index.html" class="btn-cajon">🥗 La Pizza de Franco</a>
         <a href="./arepadonhuevo/index.html" class="btn-cajon">🥗 Arepa don Huevo</a>
+        <a href="./dulcebocadopostresycafe/index.html" class="btn-cajon">🥗 Dulce Bocado Postres y Cafe</a>
 
         <div class="categoria">Tiendas y Mercados</div>
         <a href="./tienda-azul/index.html" class="btn-cajon">🔵 Tienda Azul</a>
