--- a/sotracor-caucasia/index.html
+++ b/sotracor-caucasia/index.html
@@ -19,10 +19,21 @@
         .hidden { display: none !important; }
         footer { text-align: center; padding: 20px; font-size: 12px; color: #888; background: #fff; border-top: 1px solid #eee; }
         .vp-brand { color: var(--secundario); font-weight: bold; text-decoration: none; border-bottom: 1px solid var(--primario); }
+        
+        /* Estilo para la pantalla de bloqueo */
+        #bloqueo-pantalla {
+            height: 100vh; width: 100%; position: fixed; top: 0; left: 0; 
+            background: #1a1a1a; color: white; display: flex; flex-direction: column; 
+            align-items: center; justify-content: center; text-align: center; 
+            z-index: 999999; padding: 20px; box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
-<div class="card">
+
+<div id="status-checker"></div>
+
+<div class="card" id="app-main-content">
     <header>
         <div id="display-nombre" class="logo-area">SOTRACOR CAUCASIA</div>
         <div style="font-size: 11px; color: white; margin-top: 5px; letter-spacing: 1px;">SOLICITUD DE SERVICIOS</div>
@@ -61,9 +72,53 @@
 </div>
 
 <script>
+    // ==========================================
+    // 🛡️ CONTROL DE SEGURIDAD CENTRALIZADO
+    // ==========================================
+    const APP_ID = "sotracor-caucasia"; // Debe coincidir con tu GitHub
+
+    (function() {
+        // Consultamos tu archivo central en GitHub con un parámetro aleatorio para evitar el caché
+        fetch('https://haroldco45.github.io/vibras-positivas-apps/control-vibras.js?v=' + Date.now())
+        .then(res => res.text())
+        .then(code => {
+            // Cargamos el código de GitHub en la página
+            const script = document.createElement('script');
+            script.text = code;
+            document.head.appendChild(script);
+
+            // Verificamos el estado después de una breve pausa para asegurar que cargó
+            setTimeout(() => {
+                if (typeof getEstadoApp === "function") {
+                    const estado = getEstadoApp(APP_ID);
+                    if (estado === "suspendido") {
+                        // BLOQUEO TOTAL
+                        document.body.innerHTML = `
+                            <div id="bloqueo-pantalla">
+                                <div style="font-size:80px;">🔒</div>
+                                <h1 style="color:#FFD700; font-size:24px;">SERVICIO SUSPENDIDO</h1>
+                                <p style="font-size:16px; color:#ccc; max-width:400px;">Se ha detectado un pendiente administrativo o el periodo de suscripción ha finalizado.</p>
+                                <div style="margin-top:30px; padding:20px; border:2px dashed #FFD700; border-radius:15px;">
+                                    <p style="font-size:14px; margin-bottom:10px;">Para reactivar su acceso, contacte a:</p>
+                                    <h2 style="margin:0; letter-spacing:2px;">VIBRAS POSITIVAS</h2>
+                                    <a href="https://wa.me/573117700431" style="display:inline-block; background:#25D366; color:white; padding:12px 25px; text-decoration:none; border-radius:10px; font-weight:bold; margin-top:15px;">📲 SOLICITAR REACTIVACIÓN</a>
+                                </div>
+                                <p style="margin-top:40px; font-size:10px; color:#555;">SISTEMA DE CONTROL CENTRAL © 2026</p>
+                            </div>`;
+                        window.stop();
+                    }
+                }
+            }, 500);
+        })
+        .catch(err => console.log("Validando suscripción..."));
+    })();
+
+    // ==========================================
+    // ⚙️ LÓGICA DE LA APLICACIÓN
+    // ==========================================
     const CONFIG = {
         nombreNegocio: "SOTRACOR CAUCASIA",
-        whatsapp: "573147056482", // Harold, ajusta al número real de Sotracor
+        whatsapp: "573147056482", 
         idSuscriptor: "VP-CAU-015"
     };
 
