--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <a href="./lapizzadefranco/index.html" class="btn-cajon">🥗 La Pizza de Franco</a>
         <a href="./arepadonhuevo/index.html" class="btn-cajon">🥗 Arepa don Huevo</a>
         <a href="./dulcebocadopostresycafe/index.html" class="btn-cajon">🥗 Dulce Bocado Postres y Cafe</a>
-
+        <a href="./abocados/index.html" class="btn-cajon">🥗 A Bocados</a>
+        
         <div class="categoria">Tiendas y Mercados</div>
         <a href="./tienda-azul/index.html" class="btn-cajon">🔵 Tienda Azul</a>
         <a href="./tienda-mall-el-triangulo/index.html" class="btn-cajon">🏪 Mall El Triángulo</a>
